# harness-dashboards

./: .gitignore  LICENSE.md  README.md  WORKSPACE
CCM/: BUILD.bazel  CCM Dashboard.json  Operational Dashboard.json
CD/: BUILD.bazel  K8s_overview.json
CD-Core/: BUILD.bazel  Cloud_Cost_Analysis.json  Weekly_Health_Report.json
CD-OPA-GitOps-CV/: BUILD.bazel
CD-Pipeline/: BUILD.bazel  Pipeline_Execution.json  Pipeline_Http_Resource_Specific.json  Pipeline_JVM.json  Pipeline_Threads_Instrumentation.json
CET/: Continuous_Error_Tracking_K8s_Overview.json  Weekly_Health_Report.json
CIE/: Anka_Dashboard.json  BUILD.bazel  BareMetal_Dashboard.json  Baremetal_Customer_Migration.json  CIE_Services.json  Error_logs_tracker.json  Weekly_Health_Report.json  log-service.json
Chaos/: BUILD.bazel  Chaos_Control_Plane_Metrics_Prod_1.json  Chaos_Control_Plane_Metrics_Prod_2.json  Chaos_Execution_Plane_Metrics_Prod_1.json  Chaos_Execution_Plane_Metrics_Prod_2.json  SLIs.json  System_Observerability.json
Cloud_Monitoring_SaaS_Only/: BUILD.bazel  Cloud_Storage_Monitoring.json  GCE_Network_Monitoring.json  GCE_VM_Instance_Monitoring.json  GKE_Prometheus_Pod_Node_Monitoring.json
Cluster_Pod_Details_SaaS_Only/: BUILD.bazel  Cluster_Metrics.json  Pod_Details.json  Storage_And_Volumes.json
Code-gen/: BUILD.bazel  http_request_latency.json  openai_code_latency.json  service_resources.json
Continuous_ET/: BUILD.bazel  Continuous_Error_Tracking_K8s_Overview.json  Continuous_Error_Tracking_SLIs.json  Continuous_Error_Tracking_Services.json  (+2 more)
package/: BUILD.bazel  dashboards.yaml
(+198 files in other folders)
