load("@rules_pkg//:pkg.bzl", "pkg_tar")

filegroup(
    name = "dashboards",
    srcs = glob(["*.json"]),
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "pkg_dashboards",
    srcs = [
	":dashboards",
    ],
    mode = "0600",
    package_dir = "/harness-dashboards/CCM/",
    tags = [
        "manual",
        "no-cache",
        "no-ide",
    ],
)
