load("@rules_pkg//:pkg.bzl", "pkg_tar", "pkg_zip")

pkg_tar(
    name = "pkg_dashboards",
    srcs = [
        "//access-control:dashboards",
	"//chaos:dashboards",
	"//cg-manager:dashboards",
	"//Delegate:dashboards",
	"//feature-flags:dashboards",
	"//gen-ai:dashboards",
	"//platform:dashboards",
	"//gitops:dashboards",
	"//iterator:dashboards",
	"//ng-manager:dashboards",
	"//pipeline-service:dashboards",
        "//platform-service:dashboards",
	"//sto:dashboards",
    ],
    mode = "0600",
    package_dir = "/harness-dashboards/",
    tags = [
        "manual",
        "no-cache",
        "no-ide",
    ],
)
